adds sqlite db for storing generated images
